<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.Setting.Setting"
    android:background="@color/colorFragmentBackground">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/colorText"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ib_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/settings"

        android:textSize="26sp"
        android:textColor="@color/colorText"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_setting"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/dark_theme" />

    <TextView
        android:id="@+id/tv_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/about_app"
        android:textColor="@color/colorText"

        android:textSize="15sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_text"/>

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_about_app"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/feedback"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>