<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.ResultPractic.ResultPractic">


    <TextView
        android:id="@+id/tv_you_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"/>

    <TextView
        android:id="@+id/tv_correctAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/tv_of"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_you_result"
        android:layout_marginTop="60dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/tv_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/of"
        app:layout_constraintEnd_toStartOf="@+id/tv_countAnswers"
        app:layout_constraintStart_toEndOf="@+id/tv_correctAnswers"
        app:layout_constraintTop_toBottomOf="@+id/tv_you_result"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_countAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_of"
        app:layout_constraintTop_toBottomOf="@+id/tv_you_result"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="140dp"/>

    <TextView
        android:id="@+id/tv_mistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mistakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_of"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tv_mistake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mistakes"
        android:layout_marginTop="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>